# lee-devkit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  Podspec 参考.md  README.md  RELEASE_PROCESS.md  TREE  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml  release.yml
.kiro/specs/pod-repo-push/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
Cocoapods_Template/: create_pod.sh
Cocoapods_Template/NBTemplateModule/Example/NBTemplateModule_Example/: SceneDelegate.swift  ViewController.swift
Cocoapods_Template/NBTemplateModule/Example/NBTemplateModule_Example.xcodeproj/: project.pbxproj
Cocoapods_Template/NBTemplateModule/Example/NBTemplateModule_Example.xcodeproj/project.xcworkspace/xcuserdata/ninebot.xcuserdatad/: UserInterfaceState.xcuserstate
Cocoapods_Template/NBTemplateModule/Example/NBTemplateModule_Example.xcodeproj/xcuserdata/ninebot.xcuserdatad/xcschemes/: xcschememanagement.plist
lee_devkit/: __init__.py  cli.py  config.py  py.typed  scaffold.py
lee_devkit/commands/: cocoapods.py  git_tag.py  pod_repo_push.py
lee_devkit/utils/: file_ops.py  git_ops.py  logger.py  text_ops.py
template/: LICENSE  NBTemplateModule.podspec
template/Example/: Podfile
template/Example/NBTemplateModule_Example/: AppDelegate.swift
template/Example/NBTemplateModule_Example.xcworkspace/: contents.xcworkspacedata
tests/: test_pod_repo_push.py
tmp/MyLibary/: MyLibary.podspec
